# mcvine

./: .gitignore  CMakeLists.txt  Make.mm  README.md  envs.sh  mcvine-dev.yml
applications/: Make.mm  __init__.py  makeARCSxml.py  makeARCSxml_fromnxs.py
applications/InstrumentEditor/: ChildrenTable.py  InstrumentEditor.py  ShapeTree2GuiTree.py  UpperPanel.py
docs/: Make.mm  index.html  instrument-and-visitors.dia  instrument.dia  sample-assembly.dia
instrument/: AbstractDetectorMask.py  DetectorMask.py  Make.mm  __init__.py
instrument/applications/: Make.mm
instrument/components/: Make.mm  __init__.py
instrument/elements/: AbstractAttributeContainer.py  Attribute.py  AttributeContainer.py  Copy.py  Detector.py  DetectorArray.py  DetectorPack.py  DetectorSystem.py  DetectorVisitor.py  Element.py  ElementContainer.py  GuidGenerator.py  GuidRegistry.py  Guide.py  IdGenerator.py  Instrument.py  Make.mm  Moderator.py  Monitor.py  Pixel.py  Sample.py  Visitor.py  __init__.py  _journal.py  elementTypes.py  units.py
instrument/factories/: ARCSBootstrap.py  ARCSBootstrapBase.py  ARCSBootstrap_fromnxs.py  ARCSBootstrap_mantid_idf.py  ARCSDetPackCSVParser.py  DetPackFactory.py  FakeInstrument.py  InstrumentVisitor.py  Instrument_CylindricalDetectorSystem.py  LPSDFactory.py  LrmecsBootstrap.py  LrmecsDataFileParser.py  Make.mm  PharosBootstrap.py  PharosDetCSVParser.py  PseudoSingleton.py  __init__.py  _journal.py  units.py
instrument/geometers/: ARCSGeometer.py  AbstractGeometer.py  AbstractGlobalGeometer.py  AbstractInstrumentGeometer.py  CoordinateSystem.py  FakeGeometer.py  Geometer.py  GlobalGeometer.py  InstrumentGeometer.py  LocationRegistry.py  Make.mm  PositionalInfo.py  __init__.py  _journal.py  angle.py  units.py  (+3 more)
share/: Make.mm  NeutronInstrument.dtd
tests/: Make.mm
(+190 files in other folders)
